Fixed display on small screens, still not great

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -2,13 +2,13 @@
   //outline: 1px rgba(255,0,0,1) solid
 
 body
-  padding: 0.4em
+  padding: 0.4pc
   font-family: sans-serif
-  font-size: 1em
+  font-size: 1pc
 
 .rotonde
-  outline: 1em solid
-  padding: 0.4em
+  outline: 1pc solid
+  padding: 0.4pc
   background-color: white  
   
 .profile
@@ -18,20 +18,20 @@ body
   padding: 10px
   
 .avatar
-  width: 6em
-  height: 6em
-  border-radius: 0.4em
-  margin-right: 1em
+  width: 6pc
+  height: 6pc
+  border-radius: 0.4pc
+  margin-right: 1pc
   
 .feedavatar
-  //float: left
-  width: 2em
-  height: 2em
-  border-radius: 0.2em
-  margin: 0.5em
+  float: left
+  width: 2pc
+  height: 2pc
+  border-radius: 0.2pc
+  margin: 0.5pc
 
 .feed-container
-  padding: 0.4em
+  padding: 0.4pc
   display: flex
   flex-wrap: wrap
 
@@ -40,17 +40,17 @@ body
   text-decoration: none
   
 .minilink
-  font-size: 0.75em
+  font-size: 0.75pc
   text-decoration: none
   
 .aandt
-  vertical-align: top
-  display: flex
-  flex-wrap: nowrap
+  //display: flex
+  //flex: none
+  //flex-wrap: nowrap
 
 .col
-  padding: 0.4em
-  min-width: 30em
+  padding: 0.4pc
+  min-width: 30pc
   flex: 1
   
 .media
@@ -59,22 +59,29 @@ body
   width: 100%
   
 .post
-  margin: 0.5em 0
+  margin: 0.5pc 0
   background-color: darken(white, 90%)
-  border: 0.1em
+  border: 0.1pc
   border-style: solid
   color: darken(white, 10%)
 
 .postcontent>.text
-  margin: 0.5em 0
+  margin: 0.5pc 0
 
 .date
+  padding-top: -1.5pc
+  margin-top: 1.5pc
+  margin-left: 1pc
   color: grey
-  font-size: 0.75em
+  font-size: 0.75pc
 
 .text
   vertical-align: top
   font-weight: lighter
 
+.feedtext
+  padding: 0 1pc
+
+
 .post>p
-  margin: 0.5em
+  margin: 0.5pc
